2005-10-18  Roger Leigh  <rleigh@debian.org>

	* debian/rules (config.status): Add --libexecdir option to
	configure.

	* schroot/run/00check: Print new environment variables.

	* schroot/setup/05lvm: Use schroot-releaselock to release snapshot
	device lock just prior to snapshot removal.

	* schroot/setup/00check: Print new environment variables.

	* schroot/schroot-setup.5.in: Document new environment variables.

	* schroot/sbuild-session.c (sbuild_session_setup_chroot): Add
	LIBEXEC_DIR and PID setup environment variables.

	* schroot/sbuild-chroot-lvm-snapshot.c
	(sbuild_chroot_lvm_snapshot_setup_lock): Don't unlock device at
	setup stop.

	* schroot/Makefile.am
	(pkglibexecdir): Set to $(SCHROOT_LIBEXEC_DIR).
	(pkglibexec_PROGRAMS): Add schroot-releaselock.

	* schroot/schroot-releaselock.c: New program to release device
	lock files using liblockdev.

	* configure.ac: Add SCHROOT_LIBEXEC_DIR define and substvar.

2005-10-17  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-lock.c (sbuild_lock_set_device_lock): Remove
	debugging print and sleep statements.

2005-10-17  Roger Leigh  <rleigh@debian.org>

	* Update documentation.

	* schroot/sbuild-chroot.c (sbuild_chroot_class_init): Remove the
	"current-users" and "max-users" properties, and associated object
	members and methods.

2005-10-17  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-chroot-lvm-snapshot.c
	(sbuild_chroot_lvm_snapshot_setup_lock): The device lock is held
	on the source device during snapshotting (setup start), and on the
	snapshot device from run start to run stop and then during setup
	stop while the chroot is destroyed.

	* schroot/sbuild-chroot-block-device.c
	(sbuild_chroot_block_device_setup_lock): The device lock is held
	throughout the entire session.  It is acquired at setup start and
	released at setup stop.  This uses the new sbuild-lock device
	locking primitives.

	* schroot/sbuild-chroot.h: SbuildChrootSetupLockFunc uses a