@@ -998,6 +998,8 @@ sbuild_session_run (SbuildSession  *session,
 	  /* LVM devices need the snapshot device name specifying. */
 	  if (SBUILD_IS_CHROOT_LVM_SNAPSHOT(chroot))
 	    {
+	      sbuild_chroot_set_name(chroot, session->session_id);
+
 	      gchar *dir =
 		g_path_get_dirname(sbuild_chroot_block_device_get_device
 				   (SBUILD_CHROOT_BLOCK_DEVICE(chroot)));
